--- a/src/style/icon.scss
+++ b/src/style/icon.scss
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'sell-icon';
-	src: url('../fonts/sell-icon.eot?k5xf13');
-	src: url('../fonts/sell-icon.eot?k5xf13#iefix') format('embedded-opentype'),
-			url('../fonts/sell-icon.ttf?k5xf13') format('truetype'),
-			url('../fonts/sell-icon.woff?k5xf13') format('woff'),
-			url('../fonts/sell-icon.svg?k5xf13#sell-icon') format('svg');
+	src: url('./../assets/font/sell-icon.eot?k5xf13');
+	src: url('./../assets/font/sell-icon.eot?k5xf13#iefix') format('embedded-opentype'),
+			url('./../assets/font/sell-icon.ttf?k5xf13') format('truetype'),
+			url('./../assets/font/sell-icon.woff?k5xf13') format('woff'),
+			url('./../assets/font/sell-icon.svg?k5xf13#sell-icon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
